--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
         </dependency>
 
 
+        <!-- 引入redis客户端依赖 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.2.3</version>
+        </dependency>
+
+
         <!-- AWS 依赖 -->
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -59,7 +67,11 @@
             <artifactId>zip4j</artifactId>
             <version>1.3.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-ext-jdk15on</artifactId>
+            <version>1.66</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
