--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <version>4.2.3</version>
         </dependency>
 
+        <!-- 钉钉依赖 -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
         <!-- AWS 依赖 -->
         <dependency>
