--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>de.micromata.jak</groupId>
+            <artifactId>JavaAPIforKml</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
